CPI-989: Removing tests and classes not being used
Change-Id: I0945789cd0ec0cc4cba71f5008d853dd22a09107